[fix] [BE] 주문자 내역 리스트로 내려주도록 수정